# usermode

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  consolehelper-gtk.8  consolehelper.8.in  consolehelper.c  dummy.h  gsmclient.c  gsmclient.h  pam-panel-icon.1  pam-panel-icon.c  props.c  props.h  shvar.c  shvar.h  test-userdialog.c  userdialogs.c  userdialogs.h  userhelper-messages.c  userhelper-messages.h  userhelper-wrap.c  userhelper-wrap.h  userhelper.8.in  userhelper.c  userhelper.h  userinfo.1  userinfo.c  usermount.1  usermount.c  userpasswd.1  userpasswd.c
po/: ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  de_CH.po  el.po  en_GB.po  es.po  et.po  eu_ES.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  kn.po  ko.po  ku.po  lo.po  (+35 more)
